--- a/index.html
+++ b/index.html
@@ -35,11 +35,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Pre billing starts from 1-Aug-2024</h1>
+         Vipul Raval
         <div class="finance-icons">
-            <i class="fas fa-dollar-sign"></i>
-            <i class="fas fa-chart-line"></i>
-            <i class="fas fa-calculator"></i>
+            <i class="fas fa-dollar-sign"></i>  <h1>Pre billing starts from 1-Aug-2024</h1>
         </div>
     </div>
 </body>
