--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container">
          Vipul Raval
         <div class="finance-icons">
-            <i class="fas fa-dollar-sign"></i>  <h1>Pre billing starts from 1-Aug-2024</h1>
+            <i class="fas fa-dollar-sign"> <h5>This is test website public hosting </h5></i>
         </div>
     </div>
 </body>
